# berry

catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/devel/include/berry_pkg/: BerryGetPosition.h  BerryGetPositionRequest.h  BerryGetPositionResponse.h  BerryKine.h  BerryKineRequest.h  BerryKineResponse.h  BerryPos.h  BerrySetAngle.h  BerrySetPosition.h  BulkGetItem.h  BulkGetItemRequest.h  BulkGetItemResponse.h  BulkSetItem.h  GetPosition.h  GetPositionRequest.h  GetPositionResponse.h  SetPosition.h  SyncGetPosition.h  SyncGetPositionRequest.h  SyncGetPositionResponse.h  SyncSetPosition.h
catkin_ws/devel/lib/berry_pkg/: Berry_read_write_node  IK  bulk_read_write_node  get_enc  indirect_address_node  read_write_node  sync_read_write_node
catkin_ws/devel/lib/pkgconfig/: berry_pkg.pc
catkin_ws/devel/lib/python2.7/dist-packages/berry_pkg/msg/: _BerryPos.py  _BerrySetAngle.py  _BerrySetPosition.py  _BulkSetItem.py  _SetPosition.py  _SyncSetPosition.py  __init__.py
catkin_ws/devel/lib/python2.7/dist-packages/berry_pkg/srv/: _BerryGetPosition.py  _BerryKine.py  _BulkGetItem.py  _GetPosition.py  _SyncGetPosition.py  __init__.py
catkin_ws/devel/share/berry_pkg/cmake/: berry_pkg-msg-extras.cmake  berry_pkg-msg-paths.cmake  berry_pkgConfig.cmake
catkin_ws/devel/share/common-lisp/ros/berry_pkg/msg/: BerryPos.lisp  BerrySetAngle.lisp  BerrySetPosition.lisp  BulkSetItem.lisp  SetPosition.lisp  SyncSetPosition.lisp  _package.lisp  _package_BerryPos.lisp  _package_BerrySetAngle.lisp  _package_BerrySetPosition.lisp  _package_BulkSetItem.lisp  _package_SetPosition.lisp  _package_SyncSetPosition.lisp  berry_pkg-msg.asd
catkin_ws/devel/share/common-lisp/ros/berry_pkg/srv/: BerryGetPosition.lisp  BerryKine.lisp  BulkGetItem.lisp  GetPosition.lisp  SyncGetPosition.lisp  _package.lisp  _package_BerryGetPosition.lisp  _package_BerryKine.lisp  _package_BulkGetItem.lisp  _package_GetPosition.lisp  _package_SyncGetPosition.lisp  berry_pkg-srv.asd
catkin_ws/devel/share/gennodejs/ros/berry_pkg/msg/: BerryPos.js  BerrySetAngle.js  BerrySetPosition.js  BulkSetItem.js  SetPosition.js  SyncSetPosition.js  _index.js
catkin_ws/devel/share/gennodejs/ros/berry_pkg/srv/: BerryGetPosition.js  BerryKine.js  BulkGetItem.js  GetPosition.js  SyncGetPosition.js  _index.js
catkin_ws/devel/share/roseus/ros/berry_pkg/: manifest.l
catkin_ws/devel/share/roseus/ros/berry_pkg/msg/: BerryPos.l  BerrySetAngle.l  BerrySetPosition.l  BulkSetItem.l  SetPosition.l  SyncSetPosition.l
catkin_ws/devel/share/roseus/ros/berry_pkg/srv/: BerryGetPosition.l  BerryKine.l  BulkGetItem.l  GetPosition.l  SyncGetPosition.l
catkin_ws/src/berry_pkg/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/berry_pkg/launch/: berry_launch.launch  display.launch  gazebo.launch  sync_launch.launch
catkin_ws/src/berry_pkg/msg/: BerryPos.msg  BerrySetAngle.msg
catkin_ws/src/berry_pkg/scripts/: get_kinematics.py  read_write_node.py  teleop_motor_node.py  teleop_motor_node_2.py  teleop_multicontrol_node.py  teleop_pos_node.py
catkin_ws/src/berry_pkg/src/: Berry_read_write_node.cpp  IK.cpp  bulk_read_write_node.cpp  get_enc.cpp  get_enc.txt  indirect_address_node.cpp  read_write_node.cpp  sync_read_write_node.cpp
catkin_ws/src/berry_pkg/srv/: BerryKine.srv
